Refactor homelab scripts: consolidate configurations, enhance WireGuard and Tailscale setup, and improve DNS management

--- a/scripts/config/homelab.env
+++ b/scripts/config/homelab.env
@@ -1,34 +1,36 @@
-# /home/julie/homelab/scripts/config/homelab.env
+# -------------------------------------------------------------------
+# Homelab environment configuration
+# -------------------------------------------------------------------
 
-# Domain and DNS
-DOMAIN="bardi.ch"
-DNSMASQ_SERVICE="dnsmasq-homelab.service"
-DNSMASQ_VERSION_FILE="/etc/dnsmasq-homelab.version"
-DNSMASQ_CONF_DIR="/etc/dnsmasq.d"
-DNSMASQ_PORT="53"
+# Require root for all scripts
+if [[ $EUID -ne 0 ]]; then
+  echo "❌ This script must be run with sudo/root." >&2
+  exit 1
+fi
 
-# LAN
-LAN_INTERFACE="bridge0"
-LAN_SUBNET="10.89.12.0/24"
+# --- WireGuard ---
+WG_DIR=/etc/wireguard
+CLIENTS_DIR=/var/lib/wireguard/clients
+WG_INTERFACE=wg0
+WG_PORT=51822
+WG_SUBNET=10.4.0.0/24
+WG_SERVER_KEY=${WG_DIR}/${WG_INTERFACE}.server.key
 
-# WireGuard
-WG_INTERFACE="wg0"
-WG_SUBNET="10.4.0.0/24"
-WG_PORT="51420"
+# --- DNS ---
+DNSMASQ_SERVICE=dnsmasq-homelab.service
+DNSMASQ_CONF_DIR=/etc/dnsmasq.d/homelab
+DNSMASQ_PORT=53
 
-# Tailscale
-TAILSCALE_INTERFACE="tailscale0"
-TAILSCALE_SUBNET="100.64.0.0/10"
-TAILSCALE_LOGIN_SERVER="https://nas.bardi.ch:8912"
-TAILSCALE_ADVERTISE_ROUTES="10.89.12.0/24"
+# --- LAN / Tailscale ---
+LAN_SUBNET=192.168.50.0/24
+TAILSCALE_INTERFACE=tailscale0
+TAILSCALE_SUBNET=100.64.0.0/10
+TAILSCALE_LOGIN_SERVER=https://headscale.bardi.ch
+TAILSCALE_ADVERTISE_ROUTES=192.168.50.0/24
 
-# Headscale
-HEADSCALE_PORT="8912"
-HEADSCALE_CERT_PATH="/etc/headscale/certs/fullchain.pem"
-
-# Hosts
-NAS_HOST="nas.bardi.ch"
-NAS_IP="10.89.12.4"
-DISKSTATION_IP="10.89.12.2"
-QNAP_IP="10.89.12.3"
-ROUTER_IP="10.89.12.1"
+# --- Headscale / SSL ---
+SSL_DEPLOY_DIR_HEADSCALE=/etc/headscale/ssl
+DOMAIN=bardi.ch
+HEADSCALE_PORT=443
+SSL_CHAIN_ECC=/home/julie/.acme.sh/${DOMAIN}_ecc/fullchain.cer
+SSL_KEY_ECC=/home/julie/.acme.sh/${DOMAIN}_ecc/${DOMAIN}.key
