ndppd is ok but usage to be verified

--- a/10.89.12.4/etc/ndppd.conf
+++ b/10.89.12.4/etc/ndppd.conf
@@ -1,12 +1,13 @@
 # /etc/ndppd.conf (snippet)
-route-ttl 30000
+route-ttl 300
+
 proxy bridge0 {
-    router yes
+    router no
     timeout 500
-    ttl 30000
+    ttl 300
 
     rule 2a01:8b81:4800:9c00::/64 {
-        auto
+      auto
     }
 }
 # after changes deploy, apply and restart
