--- a/10.89.12.4/etc/radvd.conf
+++ b/10.89.12.4/etc/radvd.conf
@@ -4,14 +4,45 @@ interface bridge0 {
     MaxRtrAdvInterval 100;
 
     # Advertise each WireGuard ULA prefix
-    prefix fd10:8912:0:0::/64 { AdvOnLink on; AdvAutonomous on; };
-    prefix fd10:8912:0:1::/64 { AdvOnLink on; AdvAutonomous on; };
-    prefix fd10:8912:0:2::/64 { AdvOnLink on; AdvAutonomous on; };
-    prefix fd10:8912:0:3::/64 { AdvOnLink on; AdvAutonomous on; };
-    prefix fd10:8912:0:4::/64 { AdvOnLink on; AdvAutonomous on; };
-    prefix fd10:8912:0:5::/64 { AdvOnLink on; AdvAutonomous on; };
-    prefix fd10:8912:0:6::/64 { AdvOnLink on; AdvAutonomous on; };
-    prefix fd10:8912:0:7::/64 { AdvOnLink on; AdvAutonomous on; };
+    prefix fd10:8912:0:0::/64 {
+        AdvOnLink on;
+        AdvAutonomous on;
+    };
+
+    prefix fd10:8912:0:1::/64 {
+        AdvOnLink on;
+        AdvAutonomous on;
+    };
+
+    prefix fd10:8912:0:2::/64 {
+        AdvOnLink on;
+        AdvAutonomous on;
+    };
+
+    prefix fd10:8912:0:3::/64 {
+        AdvOnLink on;
+        AdvAutonomous on;
+    };
+
+    prefix fd10:8912:0:4::/64 {
+        AdvOnLink on;
+        AdvAutonomous on;
+    };
+
+    prefix fd10:8912:0:5::/64 {
+        AdvOnLink on;
+        AdvAutonomous on;
+    };
+
+    prefix fd10:8912:0:6::/64 {
+        AdvOnLink on;
+        AdvAutonomous on;
+    };
+
+    prefix fd10:8912:0:7::/64 {
+        AdvOnLink on;
+        AdvAutonomous on;
+    };
 }
 # after changes deploy, apply and restart
 # sudo cp /home/julie/homelab/10.89.12.4/etc/radvd.conf /etc/
