99-ipv6.conf updated for ravd

--- a/10.89.12.4/etc/sysctl.d/99-ipv6.conf
+++ b/10.89.12.4/etc/sysctl.d/99-ipv6.conf
@@ -8,6 +8,17 @@
 #       sudo sysctl --system
 net.ipv6.conf.bridge0.accept_ra=1
 net.ipv6.conf.all.accept_ra=1
+
+# radvd is a sender. For radvd to work, the bridge interface must have IPv6 enabled and a link‑local address.
+# Ensure IPv6 is enabled on bridge0
+net.ipv6.conf.bridge0.disable_ipv6 = 0
+
+# Optional: enable IPv6 globally
+net.ipv6.conf.all.disable_ipv6 = 0
+
+# If you want the system to act as a router (forward packets)
+net.ipv6.conf.all.forwarding = 1
+
 # Permissions to be set once
 # sudo chown root:root /etc/sysctl.d/99-ipv6.conf
 # sudo chmod 0644 /etc/sysctl.d/99-ipv6.conf
