--- a/10.89.12.4/etc/sysctl.d/99-ipv6.conf
+++ b/10.89.12.4/etc/sysctl.d/99-ipv6.conf
@@ -2,10 +2,16 @@
 # Describe purpose: Control IPv6 Router Advertisement acceptance for bridge0 and global default
 # Created: 2025-11-09
 # to deploy use
-#	cp /home/julie/homelab/10.89.12.4/etc/sysctl.d/99-ipv6.conf /etc/sysctl.d/
+#	sudo cp /home/julie/homelab/10.89.12.4/etc/sysctl.d/99-ipv6.conf /etc/sysctl.d/
 #	sudo chown root:root /etc/sysctl.d/99-ipv6.conf
-#       sudo chmod 0644 /etc/sysctl.d/99-ipv6.conf
-#       sudo sysctl --system
+#   sudo chmod 0644 /etc/sysctl.d/99-ipv6.conf
+#   sudo sysctl --system
+#   cat /proc/sys/net/ipv6/conf/bridge0/disable_ipv6 # rto verify, should be 0
+#   ip -6 addr show dev bridge0 # should show a fe80::.../64 scope link address.
+#   if no link-local address appears
+#   sudo ip -6 addr add fe80::1/64 dev bridge0
+#   sudo systemctl restart radvd
+
 net.ipv6.conf.bridge0.accept_ra=1
 net.ipv6.conf.all.accept_ra=1
 
