By default radvd runs in the foreground only if you give -n (no daemonize).

--- a/10.89.12.4/etc/systemd/system/radvd.service
+++ b/10.89.12.4/etc/systemd/system/radvd.service
@@ -3,7 +3,7 @@ Description=Router Advertisement Daemon
 After=network.target
 
 [Service]
-ExecStart=/usr/local/sbin/radvd -C /etc/radvd.conf
+ExecStart=/usr/local/sbin/radvd -C /etc/radvd.conf -n
 Restart=on-failure
 
 [Install]
