radvd: now for wg0 to wg7 interfaces

--- a/10.89.12.4/etc/radvd.conf
+++ b/10.89.12.4/etc/radvd.conf
@@ -1,3 +1,5 @@
+#/etc/radvd.conf
+# LAN advertisement (optional, keep if you want ULA on bridge0)
 interface bridge0 {
     AdvSendAdvert on;
     MinRtrAdvInterval 30;
@@ -6,5 +8,113 @@ interface bridge0 {
     prefix fd10:8912:0:0::/64 {
         AdvOnLink on;
         AdvAutonomous on;
+        AdvValidLifetime 86400;      # 1 day
+        AdvPreferredLifetime 14400;  # 4 hours
     };
 }
+
+# WireGuard interfaces
+interface wg0 {
+    AdvSendAdvert on;
+    MinRtrAdvInterval 30;
+    MaxRtrAdvInterval 100;
+
+    prefix fd10:8912:0:10::/64 {
+        AdvOnLink on;
+        AdvAutonomous on;
+        AdvValidLifetime 86400;
+        AdvPreferredLifetime 14400;
+    };
+
+    # Optional DNS advertisement for tunnel clients
+    RDNSS fd10:8912:0:10::1 {
+        AdvRDNSSLifetime 600;
+    };
+}
+
+interface wg1 {
+    AdvSendAdvert on;
+    MinRtrAdvInterval 30;
+    MaxRtrAdvInterval 100;
+
+    prefix fd10:8912:0:11::/64 {
+        AdvOnLink on;
+        AdvAutonomous on;
+    };
+}
+
+interface wg2 {
+    AdvSendAdvert on;
+    MinRtrAdvInterval 30;
+    MaxRtrAdvInterval 100;
+
+    prefix fd10:8912:0:12::/64 {
+        AdvOnLink on;
+        AdvAutonomous on;
+    };
+}
+
+interface wg3 {
+    AdvSendAdvert on;
+    MinRtrAdvInterval 30;
+    MaxRtrAdvInterval 100;
+
+    prefix fd10:8912:0:13::/64 {
+        AdvOnLink on;
+        AdvAutonomous on;
+    };
+}
+
+interface wg4 {
+    AdvSendAdvert on;
+    MinRtrAdvInterval 30;
+    MaxRtrAdvInterval 100;
+
+    prefix fd10:8912:0:14::/64 {
+        AdvOnLink on;
+        AdvAutonomous on;
+    };
+}
+
+interface wg5 {
+    AdvSendAdvert on;
+    MinRtrAdvInterval 30;
+    MaxRtrAdvInterval 100;
+
+    prefix fd10:8912:0:15::/64 {
+        AdvOnLink on;
+        AdvAutonomous on;
+    };
+}
+
+interface wg6 {
+    AdvSendAdvert on;
+    MinRtrAdvInterval 30;
+    MaxRtrAdvInterval 100;
+
+    prefix fd10:8912:0:16::/64 {
+        AdvOnLink on;
+        AdvAutonomous on;
+    };
+}
+
+interface wg7 {
+    AdvSendAdvert on;
+    MinRtrAdvInterval 30;
+    MaxRtrAdvInterval 100;
+
+    prefix fd10:8912:0:17::/64 {
+        AdvOnLink on;
+        AdvAutonomous on;
+    };
+}
+
+# after changes deploy, apply and restart
+# sudo cp /home/julie/homelab/10.89.12.4/etc/radvd.conf /etc/
+# sudo chown root:root /etc/radvd.conf
+# sudo chmod 0644 /etc/radvd.conf
+# ls -l /etc/radvd.conf
+# sudo systemctl enable radvd
+# sudo systemctl restart radvd
+# sudo systemctl status radvd
+# sudo journalctl -u radvd -f
