--- a/10.89.12.4/etc/radvd.conf
+++ b/10.89.12.4/etc/radvd.conf
@@ -11,7 +11,7 @@ interface bridge0 {
         AdvValidLifetime 86400;      # 1 day
         AdvPreferredLifetime 14400;  # 4 hours
     };
-}
+};
 
 # WireGuard interfaces
 interface wg0 {
@@ -30,7 +30,7 @@ interface wg0 {
     RDNSS fd10:8912:0:10::1 {
         AdvRDNSSLifetime 600;
     };
-}
+};
 
 interface wg1 {
     AdvSendAdvert on;
@@ -41,7 +41,7 @@ interface wg1 {
         AdvOnLink on;
         AdvAutonomous on;
     };
-}
+};
 
 interface wg2 {
     AdvSendAdvert on;
@@ -52,7 +52,7 @@ interface wg2 {
         AdvOnLink on;
         AdvAutonomous on;
     };
-}
+};
 
 interface wg3 {
     AdvSendAdvert on;
@@ -63,7 +63,7 @@ interface wg3 {
         AdvOnLink on;
         AdvAutonomous on;
     };
-}
+};
 
 interface wg4 {
     AdvSendAdvert on;
@@ -74,7 +74,7 @@ interface wg4 {
         AdvOnLink on;
         AdvAutonomous on;
     };
-}
+};
 
 interface wg5 {
     AdvSendAdvert on;
@@ -85,7 +85,7 @@ interface wg5 {
         AdvOnLink on;
         AdvAutonomous on;
     };
-}
+};
 
 interface wg6 {
     AdvSendAdvert on;
@@ -96,7 +96,7 @@ interface wg6 {
         AdvOnLink on;
         AdvAutonomous on;
     };
-}
+};
 
 interface wg7 {
     AdvSendAdvert on;
@@ -107,14 +107,8 @@ interface wg7 {
         AdvOnLink on;
         AdvAutonomous on;
     };
-}
+};
 
 # after changes deploy, apply and restart
-# sudo cp /home/julie/homelab/10.89.12.4/etc/radvd.conf /etc/
-# sudo chown root:root /etc/radvd.conf
-# sudo chmod 0644 /etc/radvd.conf
-# ls -l /etc/radvd.conf
-# sudo systemctl enable radvd
-# sudo systemctl restart radvd
-# sudo systemctl status radvd
-# sudo journalctl -u radvd -f
+# sudo cp /home/julie/homelab/10.89.12.4/etc/radvd.conf /etc/;sudo chown root:root /etc/radvd.conf;sudo chmod 0644 /etc/radvd.conf;ls -l /etc/radvd.conf
+# sudo systemctl enable radvd;sudo systemctl restart radvd;sudo systemctl status radvd;sudo journalctl -u radvd -f
