radvd doesn’t allow inline comments (# …)

--- a/10.89.12.4/etc/radvd.conf
+++ b/10.89.12.4/etc/radvd.conf
@@ -11,8 +11,8 @@ interface bridge0 {
     prefix fd10:8912:0:0::/64 {
         AdvOnLink on;
         AdvAutonomous on;
-        AdvValidLifetime 86400;      # 1 day
-        AdvPreferredLifetime 14400;  # 4 hours
+        AdvValidLifetime 86400;
+        AdvPreferredLifetime 14400;
     }
 }
 
