--- a/10.89.12.4/etc/radvd.conf
+++ b/10.89.12.4/etc/radvd.conf
@@ -1,4 +1,5 @@
-interface bridge0 {
+interface bridge0
+{
     AdvSendAdvert on;
     MinRtrAdvInterval 30;
     MaxRtrAdvInterval 100;
@@ -11,7 +12,8 @@ interface bridge0 {
     };
 }
 
-interface wg0 {
+interface wg0
+{
     AdvSendAdvert on;
     MinRtrAdvInterval 30;
     MaxRtrAdvInterval 100;
@@ -29,7 +31,8 @@ interface wg0 {
     };
 }
 
-interface wg1 {
+interface wg1
+{
     AdvSendAdvert on;
     MinRtrAdvInterval 30;
     MaxRtrAdvInterval 100;
@@ -40,7 +43,8 @@ interface wg1 {
     };
 }
 
-interface wg2 {
+interface wg2
+{
     AdvSendAdvert on;
     MinRtrAdvInterval 30;
     MaxRtrAdvInterval 100;
@@ -51,7 +55,8 @@ interface wg2 {
     };
 }
 
-interface wg3 {
+interface wg3
+{
     AdvSendAdvert on;
     MinRtrAdvInterval 30;
     MaxRtrAdvInterval 100;
@@ -62,7 +67,8 @@ interface wg3 {
     };
 }
 
-interface wg4 {
+interface wg4
+{
     AdvSendAdvert on;
     MinRtrAdvInterval 30;
     MaxRtrAdvInterval 100;
@@ -73,7 +79,8 @@ interface wg4 {
     };
 }
 
-interface wg5 {
+interface wg5
+{
     AdvSendAdvert on;
     MinRtrAdvInterval 30;
     MaxRtrAdvInterval 100;
@@ -84,7 +91,8 @@ interface wg5 {
     };
 }
 
-interface wg6 {
+interface wg6
+{
     AdvSendAdvert on;
     MinRtrAdvInterval 30;
     MaxRtrAdvInterval 100;
@@ -95,7 +103,8 @@ interface wg6 {
     };
 }
 
-interface wg7 {
+interface wg7
+{
     AdvSendAdvert on;
     MinRtrAdvInterval 30;
     MaxRtrAdvInterval 100;
