--- a/10.89.12.4/etc/radvd.conf
+++ b/10.89.12.4/etc/radvd.conf
@@ -1,8 +1,13 @@
+# radvd.conf
+
 interface bridge0
 {
     AdvSendAdvert on;
     MinRtrAdvInterval 30;
     MaxRtrAdvInterval 100;
+    # tell clients "there may be other config (like DHCPv6)"" just like the upstream router does.
+    AdvManagedFlag off;
+    AdvOtherConfigFlag on;
 
     prefix fd10:8912:0:0::/64 {
         AdvOnLink on;
@@ -17,6 +22,7 @@ interface wg0
     AdvSendAdvert on;
     MinRtrAdvInterval 30;
     MaxRtrAdvInterval 100;
+    IgnoreIfMissing on;
 
     prefix fd10:8912:0:10::/64 {
         AdvOnLink on;
@@ -36,6 +42,7 @@ interface wg1
     AdvSendAdvert on;
     MinRtrAdvInterval 30;
     MaxRtrAdvInterval 100;
+    IgnoreIfMissing on;
 
     prefix fd10:8912:0:11::/64 {
         AdvOnLink on;
@@ -48,6 +55,7 @@ interface wg2
     AdvSendAdvert on;
     MinRtrAdvInterval 30;
     MaxRtrAdvInterval 100;
+    IgnoreIfMissing on;
 
     prefix fd10:8912:0:12::/64 {
         AdvOnLink on;
@@ -60,6 +68,7 @@ interface wg3
     AdvSendAdvert on;
     MinRtrAdvInterval 30;
     MaxRtrAdvInterval 100;
+    IgnoreIfMissing on;
 
     prefix fd10:8912:0:13::/64 {
         AdvOnLink on;
@@ -72,6 +81,7 @@ interface wg4
     AdvSendAdvert on;
     MinRtrAdvInterval 30;
     MaxRtrAdvInterval 100;
+    IgnoreIfMissing on;
 
     prefix fd10:8912:0:14::/64 {
         AdvOnLink on;
@@ -84,6 +94,7 @@ interface wg5
     AdvSendAdvert on;
     MinRtrAdvInterval 30;
     MaxRtrAdvInterval 100;
+    IgnoreIfMissing on;
 
     prefix fd10:8912:0:15::/64 {
         AdvOnLink on;
@@ -96,6 +107,7 @@ interface wg6
     AdvSendAdvert on;
     MinRtrAdvInterval 30;
     MaxRtrAdvInterval 100;
+    IgnoreIfMissing on;
 
     prefix fd10:8912:0:16::/64 {
         AdvOnLink on;
@@ -108,6 +120,7 @@ interface wg7
     AdvSendAdvert on;
     MinRtrAdvInterval 30;
     MaxRtrAdvInterval 100;
+    IgnoreIfMissing on;
 
     prefix fd10:8912:0:17::/64 {
         AdvOnLink on;
