DNS IPv6 redundancy

--- a/10.89.12.4/etc/radvd.conf
+++ b/10.89.12.4/etc/radvd.conf
@@ -1,11 +1,16 @@
 # radvd.conf
+# LAN advertisement (optional, keep if you want ULA on bridge0)
+# after changes deploy, apply and restart
+# sudo cp /home/julie/homelab/10.89.12.4/etc/radvd.conf /etc/;sudo chown root:root /etc/radvd.conf;sudo chmod 0644 /etc/radvd.conf;ls -l /etc/radvd.conf
+# sudo systemctl enable radvd;sudo systemctl restart radvd;sudo systemctl status radvd;sudo journalctl -u radvd -f
 
 interface bridge0
 {
     AdvSendAdvert on;
     MinRtrAdvInterval 30;
     MaxRtrAdvInterval 100;
-    # tell clients "there may be other config (like DHCPv6)"" just like the upstream router does.
+
+    # Match upstream RA flags for coexistence
     AdvManagedFlag off;
     AdvOtherConfigFlag on;
 
@@ -14,6 +19,13 @@ interface bridge0
         AdvAutonomous on;
         AdvValidLifetime 86400;
         AdvPreferredLifetime 14400;
+    };
+
+    # advertise both NAS DNS/local resolver and ISP resolver (stable within WWZ Telekom’s allocation)
+    # This way, clients automatically get redundancy: they’ll use your NAS first, but if it’s offline,
+    # they can still resolve via the ISP’s DNS.
+    RDNSS fd10:8912:0:0::1 2a01:8b81:4800:9c00::1 {    
+        AdvRDNSSLifetime 600;
     };
 };
 
