radvd updated to advertise IPv6 DNS for wg5 and wg7 with access to LA

--- a/10.89.12.4/etc/radvd.conf
+++ b/10.89.12.4/etc/radvd.conf
@@ -112,6 +112,10 @@ interface wg5
         AdvOnLink on;
         AdvAutonomous on;
     };
+
+    RDNSS fd10:8912:0:0::1 2a01:8b81:4800:9c00::1 {
+        AdvRDNSSLifetime 600;
+    };
 };
 
 interface wg6
@@ -137,5 +141,9 @@ interface wg7
     prefix fd10:8912:0:17::/64 {
         AdvOnLink on;
         AdvAutonomous on;
+    };
+
+    RDNSS fd10:8912:0:0::1 2a01:8b81:4800:9c00::1 {
+        AdvRDNSSLifetime 600;
     };
 };
