DNS in all configs

--- a/10.89.12.4/etc/radvd.conf
+++ b/10.89.12.4/etc/radvd.conf
@@ -49,6 +49,7 @@ interface wg0
     };
 };
 
+# wg1 – LAN-enabled tunnel
 interface wg1
 {
     AdvSendAdvert on;
@@ -60,8 +61,13 @@ interface wg1
         AdvOnLink on;
         AdvAutonomous on;
     };
+    # Trusted peers: advertise NAS + ISP DNS
+    RDNSS fd10:8912:0:0::1 2a01:8b81:4800:9c00::1 {
+        AdvRDNSSLifetime 600;
+    };
 };
 
+# wg2 – internet-only tunnel
 interface wg2
 {
     AdvSendAdvert on;
@@ -73,8 +79,13 @@ interface wg2
         AdvOnLink on;
         AdvAutonomous on;
     };
+    # Only advertise ISP DNS
+    RDNSS 2a01:8b81:4800:9c00::1 {
+        AdvRDNSSLifetime 600;
+    };
 };
 
+# wg3 – LAN-enabled tunnel
 interface wg3
 {
     AdvSendAdvert on;
@@ -86,8 +97,13 @@ interface wg3
         AdvOnLink on;
         AdvAutonomous on;
     };
+    # Trusted peers: advertise NAS + ISP DNS
+    RDNSS fd10:8912:0:0::1 2a01:8b81:4800:9c00::1 {
+        AdvRDNSSLifetime 600;
+    };
 };
 
+# wg4 – internet-only tunnel
 interface wg4
 {
     AdvSendAdvert on;
@@ -99,8 +115,13 @@ interface wg4
         AdvOnLink on;
         AdvAutonomous on;
     };
+
+    RDNSS 2a01:8b81:4800:9c00::1 {
+        AdvRDNSSLifetime 600;
+    };
 };
 
+# wg5 – LAN-enabled tunnel
 interface wg5
 {
     AdvSendAdvert on;
@@ -112,12 +133,13 @@ interface wg5
         AdvOnLink on;
         AdvAutonomous on;
     };
-
+    # Trusted peers: advertise NAS + ISP DNS
     RDNSS fd10:8912:0:0::1 2a01:8b81:4800:9c00::1 {
         AdvRDNSSLifetime 600;
     };
 };
 
+# wg6 – internet-only tunnel
 interface wg6
 {
     AdvSendAdvert on;
@@ -129,8 +151,13 @@ interface wg6
         AdvOnLink on;
         AdvAutonomous on;
     };
+
+    RDNSS 2a01:8b81:4800:9c00::1 {
+        AdvRDNSSLifetime 600;
+    };
 };
 
+# wg7 – LAN-enabled tunnel
 interface wg7
 {
     AdvSendAdvert on;
@@ -142,7 +169,7 @@ interface wg7
         AdvOnLink on;
         AdvAutonomous on;
     };
-
+    # Trusted peers: advertise NAS + ISP DNS
     RDNSS fd10:8912:0:0::1 2a01:8b81:4800:9c00::1 {
         AdvRDNSSLifetime 600;
     };
