--- a/10.89.12.4/etc/radvd.conf
+++ b/10.89.12.4/etc/radvd.conf
@@ -29,25 +29,7 @@ interface bridge0
     };
 };
 
-interface wg0
-{
-    AdvSendAdvert on;
-    MinRtrAdvInterval 30;
-    MaxRtrAdvInterval 100;
-    IgnoreIfMissing on;
-
-    prefix fd10:8912:0:10::/64 {
-        AdvOnLink on;
-        AdvAutonomous on;
-        AdvValidLifetime 86400;
-        AdvPreferredLifetime 14400;
-    };
-
-    # Optional DNS advertisement for tunnel clients
-    RDNSS fd10:8912:0:10::1 {
-        AdvRDNSSLifetime 600;
-    };
-};
+# wg0 to enabled yet, would use prefix fd10:8912:0:10::/64
 
 # wg1 – LAN-enabled tunnel
 interface wg1
