--- a/10.89.12.4/etc/radvd.conf
+++ b/10.89.12.4/etc/radvd.conf
@@ -9,6 +9,10 @@ interface bridge0
     AdvSendAdvert on;
     MinRtrAdvInterval 30;
     MaxRtrAdvInterval 100;
+    IgnoreIfMissing on;
+
+    # Tell Windows there is "other config" (DNS via DHCPv6)
+    AdvOtherConfigFlag on;
 
     # Match upstream RA flags for coexistence
     AdvManagedFlag off;
