remove duplicated option

--- a/10.89.12.4/etc/radvd.conf
+++ b/10.89.12.4/etc/radvd.conf
@@ -11,10 +11,7 @@ interface bridge0
     MaxRtrAdvInterval 100;
     IgnoreIfMissing on;
 
-    # Tell Windows there is "other config" (DNS via DHCPv6)
-    AdvOtherConfigFlag on;
-
-    # Match upstream RA flags for coexistence
+    # Match upstream RA flags for coexistence, there is "other config" (DNS via DHCPv6)
     AdvManagedFlag off;
     AdvOtherConfigFlag on;
 
