fix(dnsmasq): correct IPv6 dhcp-range syntax with constructor
Replace hard‑coded IPv6 prefixes in dhcp-range with :: when using
constructor:<iface>. This resolves startup failure ("prefix must be zero
with constructor argument") and allows dnsmasq to derive the correct
subnet from each interface automatically.

--- a/10.89.12.4/etc/dnsmasq.conf
+++ b/10.89.12.4/etc/dnsmasq.conf
@@ -27,10 +27,10 @@ dhcp-range=10.7.0.100,10.7.0.200,12h   # wg7
 
 # IPv6 DHCP ranges (minimal, just to trigger replies)
 dhcp-range=::100,::200,constructor:bridge0,ra-stateless,ra-names
-dhcp-range=fd10:8912:0:11::100,fd10:8912:0:11::200,constructor:wg1,ra-stateless,ra-names
-dhcp-range=fd10:8912:0:13::100,fd10:8912:0:13::200,constructor:wg3,ra-stateless,ra-names
-dhcp-range=fd10:8912:0:15::100,fd10:8912:0:15::200,constructor:wg5,ra-stateless,ra-names
-dhcp-range=fd10:8912:0:17::100,fd10:8912:0:17::200,constructor:wg7,ra-stateless,ra-names
+dhcp-range=::100,::200,constructor:wg1,ra-stateless,ra-names
+dhcp-range=::100,::200,constructor:wg3,ra-stateless,ra-names
+dhcp-range=::100,::200,constructor:wg5,ra-stateless,ra-names
+dhcp-range=::100,::200,constructor:wg7,ra-stateless,ra-names
 
 # Advertise Unbound as DNS (NAS ULA + ISP fallback)
 dhcp-option=option6:dns-server,[fd10:8912:0:0::1],[2a01:8b81:4800:9c00::1]
