Advertise DNS servers to clients # Order: NAS Unbound first, then ASUS router

--- a/10.89.12.4/etc/dnsmasq.conf
+++ b/10.89.12.4/etc/dnsmasq.conf
@@ -32,6 +32,16 @@ dhcp-range=::100,::200,constructor:wg3,ra-stateless,ra-names
 dhcp-range=::100,::200,constructor:wg5,ra-stateless,ra-names
 dhcp-range=::100,::200,constructor:wg7,ra-stateless,ra-names
 
-# Advertise Unbound as DNS (NAS ULA + ISP fallback)
-dhcp-option=option6:dns-server,[fd10:8912:0:0::1],[2a01:8b81:4800:9c00::1]
-dhcp-option=option:dns-server,10.89.12.4,2a01:8b81:4800:9c00::1
+# --------------------------------------------------------
+# Advertise DNS servers to clients
+# Order: NAS Unbound first, then ASUS router
+# --------------------------------------------------------
+
+# IPv6 DNS servers
+# NAS ULA first, then ASUS router link-local (scoped to bridge0)
+dhcp-option=option6:dns-server,[fd10:8912:0:0::1],[fe80::127c:61ff:fe42:c2c0%bridge0]
+
+# IPv4 DNS servers
+# NAS Unbound first, then ASUS router
+dhcp-option=option:dns-server,10.89.12.4
+dhcp-option=option:dns-server,10.89.12.1
