fix(dnsmasq): remove scoped link-local IPv6 from dhcp-option
Dnsmasq cannot advertise link-local IPv6 addresses with scope identifiers
(e.g. fe80::%bridge0) in dhcp-option lines. Updated config to only use
NAS ULA (fd10:8912:0:0::1) and ISP global resolver (2a01:8b81:4800:9c00::1)
for IPv6 DNS advertisement. IPv4 block continues to prefer NAS Unbound
(10.89.12.4) then ASUS router (10.89.12.1).

This ensures dnsmasq starts cleanly and clients always get stable,
routable DNS servers in the correct order.

--- a/10.89.12.4/etc/dnsmasq.conf
+++ b/10.89.12.4/etc/dnsmasq.conf
@@ -34,12 +34,14 @@ dhcp-range=::100,::200,constructor:wg7,ra-stateless,ra-names
 
 # --------------------------------------------------------
 # Advertise DNS servers to clients
-# Order: NAS Unbound first, then ASUS router
+# Order: NAS Unbound first, then ASUS router/global ISP resolver
 # --------------------------------------------------------
 
 # IPv6 DNS servers
-# NAS ULA first, then ASUS router link-local (scoped to bridge0)
-dhcp-option=option6:dns-server,[fd10:8912:0:0::1],[fe80::127c:61ff:fe42:c2c0%bridge0]
+# NOTE: dnsmasq cannot accept link-local addresses (fe80::/10) with scope identifiers like %bridge0.
+#       Only global or ULA IPv6 addresses are valid here.
+# NAS ULA first, then ISP global IPv6 resolver (stable, tied to ISP infrastructure)
+dhcp-option=option6:dns-server,[fd10:8912:0:0::1],[2a01:8b81:4800:9c00::1]
 
 # IPv4 DNS servers
 # NAS Unbound first, then ASUS router
