Exclude libvirt VM bridges to avoid conflicts

--- a/10.89.12.4/etc/dnsmasq.conf
+++ b/10.89.12.4/etc/dnsmasq.conf
@@ -15,6 +15,18 @@ interface=wg5
 interface=wg6
 interface=wg7
 
+# Exclude libvirt VM bridges to avoid conflicts
+except-interface=virbr0
+except-interface=virbr1
+except-interface=virbr2
+except-interface=virbr3
+except-interface=virbr4
+except-interface=virbr5
+except-interface=virbr6
+except-interface=virbr7
+except-interface=virbr8
+except-interface=virbr9
+
 # Disable dnsmasq's own DNS if you only want Unbound
 port=0
 
