config(dnsmasq): isolate homelab DHCP from UGOS/libvirt instances
Restricted dnsmasq to bind only on LAN (bridge0) and active WireGuard interfaces.
Added except-interface rules for virbr0–virbr9 to avoid conflicts with UGOS/libvirt
dnsmasq processes. Introduced dedicated lease file (/var/lib/misc/dnsmasq-homelab.leases)
and PID file (/run/dnsmasq-homelab.pid) to ensure coexistence with system-managed
dnsmasq. Commented out wg7 ranges until interface is fully configured. Maintains
correct DNS advertisement order: NAS Unbound first, then ASUS router, with IPv6 ULA
and ISP global resolver.

--- a/10.89.12.4/etc/dnsmasq.conf
+++ b/10.89.12.4/etc/dnsmasq.conf
@@ -30,6 +30,10 @@ except-interface=virbr9
 # Disable dnsmasq's own DNS if you only want Unbound
 port=0
 
+# Use separate lease file and PID file to avoid clashes with UGOS/libvirt dnsmasq
+dhcp-leasefile=/var/lib/misc/dnsmasq-homelab.leases
+pid-file=/run/dnsmasq-homelab.pid
+
 # IPv4 DHCP ranges (adjust per subnet)
 dhcp-range=10.89.12.100,10.89.12.200,12h
 dhcp-range=10.1.0.100,10.1.0.200,12h   # wg1
