wireguard conf not ready yet

--- a/10.89.12.4/etc/dnsmasq.conf
+++ b/10.89.12.4/etc/dnsmasq.conf
@@ -7,13 +7,13 @@
 # 
 # Listen only on your LAN/NAS interfaces
 interface=bridge0
-interface=wg1
-interface=wg2
-interface=wg3
-interface=wg4
-interface=wg5
-interface=wg6
-interface=wg7
+#interface=wg1
+#interface=wg2
+#interface=wg3
+#interface=wg4
+#interface=wg5
+#interface=wg6
+#interface=wg7
 
 # Exclude libvirt VM bridges to avoid conflicts
 except-interface=virbr0
@@ -36,17 +36,17 @@ pid-file=/run/dnsmasq-homelab.pid
 
 # IPv4 DHCP ranges (adjust per subnet)
 dhcp-range=10.89.12.100,10.89.12.200,12h
-dhcp-range=10.1.0.100,10.1.0.200,12h   # wg1
-dhcp-range=10.3.0.100,10.3.0.200,12h   # wg3
-dhcp-range=10.5.0.100,10.5.0.200,12h   # wg5
-dhcp-range=10.7.0.100,10.7.0.200,12h   # wg7
+#dhcp-range=10.1.0.100,10.1.0.200,12h   # wg1
+#dhcp-range=10.3.0.100,10.3.0.200,12h   # wg3
+#dhcp-range=10.5.0.100,10.5.0.200,12h   # wg5
+#dhcp-range=10.7.0.100,10.7.0.200,12h   # wg7
 
 # IPv6 DHCP ranges (minimal, just to trigger replies)
 dhcp-range=::100,::200,constructor:bridge0,ra-stateless,ra-names
-dhcp-range=::100,::200,constructor:wg1,ra-stateless,ra-names
-dhcp-range=::100,::200,constructor:wg3,ra-stateless,ra-names
-dhcp-range=::100,::200,constructor:wg5,ra-stateless,ra-names
-dhcp-range=::100,::200,constructor:wg7,ra-stateless,ra-names
+#dhcp-range=::100,::200,constructor:wg1,ra-stateless,ra-names
+#dhcp-range=::100,::200,constructor:wg3,ra-stateless,ra-names
+#dhcp-range=::100,::200,constructor:wg5,ra-stateless,ra-names
+#dhcp-range=::100,::200,constructor:wg7,ra-stateless,ra-names
 
 # --------------------------------------------------------
 # Advertise DNS servers to clients
