--- a/10.89.12.4/etc/dnsmasq.conf
+++ b/10.89.12.4/etc/dnsmasq.conf
@@ -1,7 +1,7 @@
 # dnsmasq.conf
 # after changes deploy, apply and restart
 #   sudo cp /home/julie/homelab/10.89.12.4/etc/dnsmasq.conf /etc/;sudo chown root:root /etc/dnsmasq.conf;sudo chmod 0644 /etc/dnsmasq.conf;ls -l /etc/dnsmasq.conf
-#   sudo systemctl enable dnsmasq;sudo systemctl restart dnsmasq;sudo systemctl status dnsmasq;sudo journalctl -u dnsmasq -f
+#   sudo systemctl disable --now dnsmasq;sudo systemctl enable --now dnsmasq-homelab;sudo systemctl restart dnsmasq-homelab;sudo systemctl status dnsmasq-homelab;sudo journalctl -u dnsmasq-homelab -f
 # validate on Windows clients in PowerShell with
 #   ipconfig /release6;ipconfig /renew6;Get-DnsClientServerAddress -AddressFamily IPv6
 # 
