Dnsmasq needs to be run in foreground mode when managed by systemd. That’s done with the -k flag (keep in foreground). The default distro unit uses this, but your custom dnsmasq-homelab.service doesn’t.

--- a/10.89.12.4/etc/systemd/system/dnsmasq-homelab.service
+++ b/10.89.12.4/etc/systemd/system/dnsmasq-homelab.service
@@ -4,7 +4,7 @@ After=network.target
 Wants=network.target
 
 [Service]
-ExecStart=/usr/sbin/dnsmasq \
+ExecStart=/usr/sbin/dnsmasq -k \
   --conf-file=/etc/dnsmasq.conf \
   --dhcp-leasefile=/var/lib/misc/dnsmasq-homelab.leases \
   --pid-file=/run/dnsmasq-homelab.pid \
