--- a/10.89.12.4/etc/unbound/unbound.conf
+++ b/10.89.12.4/etc/unbound/unbound.conf
@@ -6,21 +6,27 @@
 # sudo systemctl enable unbound;sudo systemctl restart unbound;sudo systemctl status unbound;sudo journalctl -u unbound -f
 
 server:
-    # Listen on all IPv4
-    interface: 0.0.0.0
-    access-control: 127.0.0.0/8 allow
+    # Listen on loopback IPv4, do not listen to anything else as dnsmasq handles LAN interfaces
+    interface: 127.0.0.1
 
     # Listen on loopback IPv6
     interface: ::1
 
+    # Listen on your LAN IPv4
+    interface: 10.89.12.4
+
     # Listen on your ULA
     interface: fd10:8912::1
-    access-control: fd10:8912::/64 allow
 
     # Listen on your global IPv6 (optional, but useful if you want Unbound reachable via ISP prefix)
     interface: 2a01:8b81:4800:9c00::1
 
-    access-control: 10.89.0.0/16 allow      # LAN + WireGuard
+    # LAN
+    access-control: 127.0.0.0/8 allow
+    access-control: 10.89.0.0/16 allow
+    access-control: fd10:8912::/64 allow
+    access-control: 2a01:8b81:4800:9c00::/64 allow
+
     access-control: 100.64.0.0/10 allow     # Tailscale
     do-ip6: yes
     access-control: 10.1.0.0/24 allow       #wg1
