commen the wireguard interfaces to radvd.conf

--- a/10.89.12.4/etc/radvd.conf
+++ b/10.89.12.4/etc/radvd.conf
@@ -30,130 +30,130 @@ interface bridge0
     };
 };
 
-# wg0 to enabled yet, would use prefix fd10:8912:0:10::/64
+# # wg0 to enabled yet, would use prefix fd10:8912:0:10::/64
 
-# wg1 – LAN-enabled tunnel
-interface wg1
-{
-    AdvSendAdvert on;
-    MinRtrAdvInterval 30;
-    MaxRtrAdvInterval 100;
-    IgnoreIfMissing on;
+# # wg1 – LAN-enabled tunnel
+# interface wg1
+# {
+#     AdvSendAdvert on;
+#     MinRtrAdvInterval 30;
+#     MaxRtrAdvInterval 100;
+#     IgnoreIfMissing on;
 
-    prefix fd10:8912:0:11::/64 {
-        AdvOnLink on;
-        AdvAutonomous on;
-    };
-    # Trusted peers: advertise NAS + ISP DNS
-    RDNSS fd10:8912:0:0::1 2a01:8b81:4800:9c00::1 {
-        AdvRDNSSLifetime 600;
-    };
-};
+#     prefix fd10:8912:0:11::/64 {
+#         AdvOnLink on;
+#         AdvAutonomous on;
+#     };
+#     # Trusted peers: advertise NAS + ISP DNS
+#     RDNSS fd10:8912:0:0::1 2a01:8b81:4800:9c00::1 {
+#         AdvRDNSSLifetime 600;
+#     };
+# };
 
-# wg2 – internet-only tunnel
-interface wg2
-{
-    AdvSendAdvert on;
-    MinRtrAdvInterval 30;
-    MaxRtrAdvInterval 100;
-    IgnoreIfMissing on;
+# # wg2 – internet-only tunnel
+# interface wg2
+# {
+#     AdvSendAdvert on;
+#     MinRtrAdvInterval 30;
+#     MaxRtrAdvInterval 100;
+#     IgnoreIfMissing on;
 
-    prefix fd10:8912:0:12::/64 {
-        AdvOnLink on;
-        AdvAutonomous on;
-    };
-    # Only advertise ISP DNS
-    RDNSS 2a01:8b81:4800:9c00::1 {
-        AdvRDNSSLifetime 600;
-    };
-};
+#     prefix fd10:8912:0:12::/64 {
+#         AdvOnLink on;
+#         AdvAutonomous on;
+#     };
+#     # Only advertise ISP DNS
+#     RDNSS 2a01:8b81:4800:9c00::1 {
+#         AdvRDNSSLifetime 600;
+#     };
+# };
 
-# wg3 – LAN-enabled tunnel
-interface wg3
-{
-    AdvSendAdvert on;
-    MinRtrAdvInterval 30;
-    MaxRtrAdvInterval 100;
-    IgnoreIfMissing on;
+# # wg3 – LAN-enabled tunnel
+# interface wg3
+# {
+#     AdvSendAdvert on;
+#     MinRtrAdvInterval 30;
+#     MaxRtrAdvInterval 100;
+#     IgnoreIfMissing on;
 
-    prefix fd10:8912:0:13::/64 {
-        AdvOnLink on;
-        AdvAutonomous on;
-    };
-    # Trusted peers: advertise NAS + ISP DNS
-    RDNSS fd10:8912:0:0::1 2a01:8b81:4800:9c00::1 {
-        AdvRDNSSLifetime 600;
-    };
-};
+#     prefix fd10:8912:0:13::/64 {
+#         AdvOnLink on;
+#         AdvAutonomous on;
+#     };
+#     # Trusted peers: advertise NAS + ISP DNS
+#     RDNSS fd10:8912:0:0::1 2a01:8b81:4800:9c00::1 {
+#         AdvRDNSSLifetime 600;
+#     };
+# };
 
-# wg4 – internet-only tunnel
-interface wg4
-{
-    AdvSendAdvert on;
-    MinRtrAdvInterval 30;
-    MaxRtrAdvInterval 100;
-    IgnoreIfMissing on;
+# # wg4 – internet-only tunnel
+# interface wg4
+# {
+#     AdvSendAdvert on;
+#     MinRtrAdvInterval 30;
+#     MaxRtrAdvInterval 100;
+#     IgnoreIfMissing on;
 
-    prefix fd10:8912:0:14::/64 {
-        AdvOnLink on;
-        AdvAutonomous on;
-    };
+#     prefix fd10:8912:0:14::/64 {
+#         AdvOnLink on;
+#         AdvAutonomous on;
+#     };
 
-    RDNSS 2a01:8b81:4800:9c00::1 {
-        AdvRDNSSLifetime 600;
-    };
-};
+#     RDNSS 2a01:8b81:4800:9c00::1 {
+#         AdvRDNSSLifetime 600;
+#     };
+# };
 
-# wg5 – LAN-enabled tunnel
-interface wg5
-{
-    AdvSendAdvert on;
-    MinRtrAdvInterval 30;
-    MaxRtrAdvInterval 100;
-    IgnoreIfMissing on;
+# # wg5 – LAN-enabled tunnel
+# interface wg5
+# {
+#     AdvSendAdvert on;
+#     MinRtrAdvInterval 30;
+#     MaxRtrAdvInterval 100;
+#     IgnoreIfMissing on;
 
-    prefix fd10:8912:0:15::/64 {
-        AdvOnLink on;
-        AdvAutonomous on;
-    };
-    # Trusted peers: advertise NAS + ISP DNS
-    RDNSS fd10:8912:0:0::1 2a01:8b81:4800:9c00::1 {
-        AdvRDNSSLifetime 600;
-    };
-};
+#     prefix fd10:8912:0:15::/64 {
+#         AdvOnLink on;
+#         AdvAutonomous on;
+#     };
+#     # Trusted peers: advertise NAS + ISP DNS
+#     RDNSS fd10:8912:0:0::1 2a01:8b81:4800:9c00::1 {
+#         AdvRDNSSLifetime 600;
+#     };
+# };
 
-# wg6 – internet-only tunnel
-interface wg6
-{
-    AdvSendAdvert on;
-    MinRtrAdvInterval 30;
-    MaxRtrAdvInterval 100;
-    IgnoreIfMissing on;
+# # wg6 – internet-only tunnel
+# interface wg6
+# {
+#     AdvSendAdvert on;
+#     MinRtrAdvInterval 30;
+#     MaxRtrAdvInterval 100;
+#     IgnoreIfMissing on;
 
-    prefix fd10:8912:0:16::/64 {
-        AdvOnLink on;
-        AdvAutonomous on;
-    };
+#     prefix fd10:8912:0:16::/64 {
+#         AdvOnLink on;
+#         AdvAutonomous on;
+#     };
 
-    RDNSS 2a01:8b81:4800:9c00::1 {
-        AdvRDNSSLifetime 600;
-    };
-};
+#     RDNSS 2a01:8b81:4800:9c00::1 {
+#         AdvRDNSSLifetime 600;
+#     };
+# };
 
-# wg7 – LAN-enabled tunnel
-interface wg7
-{
-    AdvSendAdvert on;
-    MinRtrAdvInterval 30;
-    MaxRtrAdvInterval 100;
-    IgnoreIfMissing on;
+# # wg7 – LAN-enabled tunnel
+# interface wg7
+# {
+#     AdvSendAdvert on;
+#     MinRtrAdvInterval 30;
+#     MaxRtrAdvInterval 100;
+#     IgnoreIfMissing on;
 
-    prefix fd10:8912:0:17::/64 {
-        AdvOnLink on;
-        AdvAutonomous on;
-    };
-    # Trusted peers: advertise NAS + ISP DNS
-    RDNSS fd10:8912:0:0::1 2a01:8b81:4800:9c00::1 {
-        AdvRDNSSLifetime 600;
-    };
-};
+#     prefix fd10:8912:0:17::/64 {
+#         AdvOnLink on;
+#         AdvAutonomous on;
+#     };
+#     # Trusted peers: advertise NAS + ISP DNS
+#     RDNSS fd10:8912:0:0::1 2a01:8b81:4800:9c00::1 {
+#         AdvRDNSSLifetime 600;
+#     };
+# };
