--- a/10.89.12.4/etc/unbound/unbound.conf
+++ b/10.89.12.4/etc/unbound/unbound.conf
@@ -4,6 +4,16 @@
 # sudo systemctl enable unbound;sudo systemctl restart unbound;sudo systemctl status unbound;sudo journalctl -u unbound -f
 
 server:
+    # Modules: validator + iterator only (no subnetcache)
+    module-config: "validator iterator"
+
+    # Allow queries to localhost
+    do-not-query-localhost: no
+
+    # Trust anchor and root hints
+    auto-trust-anchor-file: "/etc/unbound/root.key"
+    root-hints: "/var/lib/unbound/root.hints"
+
     # Interfaces
     interface: 127.0.0.1
     interface: ::1
@@ -51,10 +61,6 @@ server:
     hide-version: yes
     qname-minimisation: yes
 
-    # Root hints for fallback recursion
-    root-hints: "/var/lib/unbound/root.hints"
-    auto-trust-anchor-file: "/etc/unbound/root.key"
-    do-not-query-localhost: no
 
 # The sudo unbound-control-setup command generates those key/cert files.
 remote-control:
