--- a/10.89.12.4/etc/unbound/unbound.conf
+++ b/10.89.12.4/etc/unbound/unbound.conf
@@ -73,6 +73,9 @@ remote-control:
         control-cert-file: /etc/unbound/unbound_control.pem
 
 # after edititing run
-#       sudo systemctl restart unbound
-# OR
-#       sudo service unbound restart
+#   sudo unbound-checkconf /etc/unbound/unbound.conf
+# to validate the config, then
+#   sudo systemctl restart unbound (or sudo service unbound restart)
+# test:
+#  dig @127.0.0.1 google.com +short
+#  dig @127.0.0.1 bardi.ch +short
