auto-trust-anchor-file: "/var/lib/unbound/root.key"

--- a/10.89.12.4/etc/unbound/unbound.conf
+++ b/10.89.12.4/etc/unbound/unbound.conf
@@ -11,7 +11,7 @@ server:
     do-not-query-localhost: no
 
     # Trust anchor and root hints
-    auto-trust-anchor-file: "/etc/unbound/root.key"
+    auto-trust-anchor-file: "/var/lib/unbound/root.key"
     root-hints: "/var/lib/unbound/root.hints"
 
     # Interfaces
