forward-zone added

--- a/10.89.12.4/etc/unbound/unbound.conf
+++ b/10.89.12.4/etc/unbound/unbound.conf
@@ -72,6 +72,11 @@ remote-control:
         control-key-file: /etc/unbound/unbound_control.key
         control-cert-file: /etc/unbound/unbound_control.pem
 
+forward-zone:
+    name: "."
+    forward-addr: 1.1.1.1        # Cloudflare
+    forward-addr: 9.9.9.9        # Quad9
+
 # after edititing run
 #   sudo unbound-checkconf /etc/unbound/unbound.conf
 # to validate the config, then
