verbosity 2 added to unbound.conf for more detailed logging.

--- a/10.89.12.4/etc/unbound/unbound.conf
+++ b/10.89.12.4/etc/unbound/unbound.conf
@@ -61,6 +61,7 @@ server:
     hide-version: yes
     qname-minimisation: yes
 
+    verbosity: 2
 
 # The sudo unbound-control-setup command generates those key/cert files.
 remote-control:
