User=coredns Group=coredns

--- a/10.89.12.4/etc/systemd/system/coredns.service
+++ b/10.89.12.4/etc/systemd/system/coredns.service
@@ -4,8 +4,8 @@ Description=CoreDNS
 After=network.target
 
 [Service]
-User=nobody
-Group=nogroup
+User=coredns
+Group=coredns
 ExecStart=/usr/local/bin/coredns -conf /etc/coredns/Corefile
 Restart=on-failure
 LimitNOFILE=65536
