--- a/10.89.12.4/etc/systemd/system/coredns.service
+++ b/10.89.12.4/etc/systemd/system/coredns.service
@@ -12,3 +12,8 @@ LimitNOFILE=65536
 
 [Install]
 WantedBy=multi-user.target
+# After modification
+# sudo systemctl daemon-reload
+# sudo systemctl reset-failed
+# sudo systemctl enable --now coredns
+# sudo journalctl -u coredns -f
