--- a/10.89.12.4/etc/caddy/Caddyfile
+++ b/10.89.12.4/etc/caddy/Caddyfile
@@ -37,7 +37,8 @@ bardi.ch {
 	reverse_proxy 10.89.12.2:443 # DiskStation HTTPS
 }
 
-router.bardi.ch:80 {
+router.bardi.ch {
+	tls /etc/headscale/certs/fullchain.pem /etc/headscale/certs/privkey.pem
 	reverse_proxy 10.89.12.1:8080
 }
 
