--- a/10.89.12.4/etc/caddy/Caddyfile
+++ b/10.89.12.4/etc/caddy/Caddyfile
@@ -77,6 +77,12 @@ bardi.ch:6690 {
 	reverse_proxy 10.89.12.2:6690
 }
 
+:443 {
+    @unknown { not host bardi.ch router.bardi.ch dns.bardi.ch vpn.bardi.ch derp.vpn.bardi.ch }
+    respond @unknown "Not Found" 404
+    # log disabled to avoid disk spin
+}
+
 # After modification run
 # 1. Deploy teh file
 #    sudo cp /home/julie/homelab/10.89.12.4/etc/caddy/Caddyfile /etc/caddy/Caddyfile
