--- a/10.89.12.4/etc/caddy/Caddyfile
+++ b/10.89.12.4/etc/caddy/Caddyfile
@@ -78,7 +78,7 @@ bardi.ch:6690 {
 }
 
 :443 {
-    @unknown { not host bardi.ch router.bardi.ch dns.bardi.ch vpn.bardi.ch derp.vpn.bardi.ch }
+    @unknown not host bardi.ch router.bardi.ch dns.bardi.ch vpn.bardi.ch derp.vpn.bardi.ch
     respond @unknown "Not Found" 404
     # log disabled to avoid disk spin
 }
