--- a/10.89.12.4/etc/caddy/Caddyfile
+++ b/10.89.12.4/etc/caddy/Caddyfile
@@ -78,17 +78,17 @@ bardi.ch:6690 {
 }
 
 :443 {
-	@unknown not host bardi.ch router.bardi.ch dns.bardi.ch vpn.bardi.ch derp.vpn.bardi.ch
-	respond @unknown "Not Found" 404
-	# log disabled to avoid disk spin
+    @unknown not host bardi.ch router.bardi.ch dns.bardi.ch vpn.bardi.ch derp.vpn.bardi.ch
+    respond @unknown "Not Found" 404
+    # log disabled to avoid disk spin
 }
 
 # After modification run
-# 1. Deploy teh file
+# 1. Check the config first (dry run):
+#    sudo caddy validate --config /home/julie/homelab/10.89.12.4/etc/caddy/Caddyfile
+#    sudo caddy fmt --overwrite   /home/julie/homelab/10.89.12.4/etc/caddy/Caddyfile
+# 2. Deploy the file
 #    sudo cp /home/julie/homelab/10.89.12.4/etc/caddy/Caddyfile /etc/caddy/Caddyfile
-# 2. Check the config first (dry run):
-#    sudo caddy validate --config /etc/caddy/Caddyfile
-#    sudo caddy fmt --overwrite /etc/caddy/Caddyfile
 # 3. Reload gracefully:
 #    sudo caddy reload --config /etc/caddy/Caddyfile
 # 4. If running as a systemd service:
