--- a/10.89.12.4/etc/caddy/Caddyfile
+++ b/10.89.12.4/etc/caddy/Caddyfile
@@ -46,13 +46,13 @@ bardi.ch:8384 {
 }
 
 router.bardi.ch {
-	bind 10.89.12.4 fd7a:115c:a1e0::4
+	bind 10.89.12.4 2a01:8b81:4800:9c00::4
 	tls /etc/headscale/certs/fullchain.pem /etc/headscale/certs/privkey.pem
 	reverse_proxy 10.89.12.1:8080
 }
 
 dns.bardi.ch {
-	bind 10.89.12.4 fd7a:115c:a1e0::4
+	bind 10.89.12.4 2a01:8b81:4800:9c00::4
 	tls /etc/headscale/certs/fullchain.pem /etc/headscale/certs/privkey.pem
 	reverse_proxy 127.0.0.1:8053 # Unbound DNS over HTTPS
 }
@@ -68,19 +68,19 @@ derp.vpn.bardi.ch {
 }
 
 bardi.ch:5001 {
-	bind 10.89.12.4 fd7a:115c:a1e0::4
+	bind 10.89.12.4 2a01:8b81:4800:9c00::4
 	tls /etc/headscale/certs/fullchain.pem /etc/headscale/certs/privkey.pem
 	reverse_proxy 10.89.12.2:5001
 }
 
 qnap.bardi.ch {
-	bind 10.89.12.4 fd7a:115c:a1e0::4
+	bind 10.89.12.4 2a01:8b81:4800:9c00::4
 	tls /etc/headscale/certs/fullchain.pem /etc/headscale/certs/privkey.pem
 	reverse_proxy 10.89.12.3:8080
 }
 
 nas.bardi.ch {
-	bind 10.89.12.4 fd7a:115c:a1e0::4
+	bind 10.89.12.4 2a01:8b81:4800:9c00::4
 	tls /etc/headscale/certs/fullchain.pem /etc/headscale/certs/privkey.pem
 	reverse_proxy 127.0.0.1:9999
 }
